--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <title>Twitter bootstrap demo!</title>
 </head>
 <body>
-    <div class="row">
-        <div class="span4">First cell</div>
-        <div class="span4">Second cell</div>
-        <div class="span4">Third cell</div>
-    </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+    </nav>
+
 </body>
 </html>
